# wave_rover_pi

./: .gitignore  README.md  Ubuntu_24_04_LTS_Install_ROS2_Jazzy.sh  Ubuntu_24_04_LTS_SetupCameraModule3.sh  camera_web_server.py
Architecture/: wave_rover_pi_feature_automated_driving_modes.drawio
PC-side-Software/: camera_stream_viewer.py
PC-side-Software/ROS2_PC/: Docker_CreateContainer.sh  Docker_Install.sh  ROS2_CopyRepoToWorkspace.sh  ROS2_CopyWorkspaceToRepo.sh  ROS2_StartNodes.sh  VisualizeRobotPosition.sh
PC-side-Software/ROS2_PC/ros2_ws/src/visual_odo/: ARCHITECTURE.md  package.xml  setup.cfg  setup.py
PC-side-Software/ROS2_PC/ros2_ws/src/visual_odo/launch/: sensor_fusion_vo.launch.py  simple_vo.launch.py  visual_odo.launch.py
PC-side-Software/ROS2_PC/ros2_ws/src/visual_odo/resource/: visual_odo
PC-side-Software/ROS2_PC/ros2_ws/src/visual_odo/scripts/: camera_feed_raw_republisher.py
PC-side-Software/ROS2_PC/ros2_ws/src/visual_odo/test/: test_copyright.py
PC-side-Software/ROS2_PC/ros2_ws/src/visual_odo/visual_odo/: __init__.py  compressed_to_raw.py  simple_vo.py
ROS2_Pi/: CameraFeed_Start.sh  Docker_AttachToContainer.sh  Docker_CreateContainer.sh  Docker_Install.sh  Docker_NewTerminal.sh  Docker_RemoveContainer.sh  Install_ROS2_on_RaspberryPi_OS.sh
ROS2_Pi/DockerROS2/: Docker_CreateContainer.sh
ROS2_Pi/camera_ros_config/: dummy_calibration.yaml
ROS2_Pi/ros2_ws/: README.md  (+2 more)
ROS2_Pi/ros2_ws/src/imu_tools/: package.xml  setup.cfg  setup.py
ROS2_Pi/ros2_ws/src/imu_tools/imu_tools/: imu_parser_node.py
ROS2_Pi/ros2_ws/src/imu_tools/launch/: imu_parser_launch.py
ROS2_Pi/ros2_ws/src/imu_tools/test/: test_copyright.py  test_flake8.py  test_pep257.py
(+40 files in other folders)
